edit codeInterface.   move code from .mxml to .as
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6628 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/DropDownValue.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/DropDownValue.mxml
@@ -7,9 +7,16 @@
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
+			import mx.events.FlexEvent;
 			
+			import spark.events.TextOperationEvent;			
+
+			protected function changeContent(event:TextOperationEvent):void
+			{
+				dispatchEvent(new Event( Event.CHANGE ));				
+			}
 		]]>
-	</fx:Script>
-	<s:Label text="Values:"/>
-	<ns:LangTextInput id="langTextInput" width="110"/>	
+	</fx:Script>	
+	<ns:LangTextInput id="langTextInput" width="85" change="changeContent(event)"/>	
+	<s:TextInput      id="textValue"     width="75" change="changeContent(event)"/>
 </s:HGroup>
