--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
@@ -67,15 +67,15 @@
 			<s:Label  text="Containers:" fontSize="20"/>
 			<s:List id="containersList" width="200" height="80" change="this.currentContainer=List(event.target).selectedItem"/>
 			<s:HGroup width="100%">
-				<s:Button id="addContainer" label="Add"/>
-				<s:Button id="deleteContainer" label="Delete" enabled="{containersList.selectedIndex != -1}"/>
+				<s:Button id="addContainerButton" label="Add"/>
+				<s:Button id="deleteContainerButton" label="Delete" enabled="{containersList.selectedIndex != -1}"/>
 			</s:HGroup>
 		</s:VGroup>
 		<s:Label  text="Actions:" fontSize="20"/>
 		<mx:HRule width="100%"/>
 		<s:HGroup>
 			<s:VGroup  width="100%" height="100%" paddingTop="0">
-				<s:List id="actionsList" width="200" height="{ 250}" change="this.currentAction=List(event.target).selectedItem"/>
+				<s:List id="actionsList" width="200" height="250" change="this.currentAction=List(event.target).selectedItem"/>
 				<s:HGroup width="100%">
 					<s:HGroup width="100%"/>
 					<s:Button id="addAction" label="Add"/>
@@ -135,7 +135,6 @@
 						</mx:FormItem>
 						
 						<mx:FormItem label="InterfaceName:" toolTip="Это VbType">
-							
 							<ns2:LangTextArea id="parInterfaceName" width="200" height="40" change="{changeField()}"/>
 						</mx:FormItem>
 						
