--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectCategory.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectCategory.mxml
@@ -15,7 +15,7 @@
 //			public var currentLanguage:String;
 			
 			[Bindable]
-			public var words:Object = new Object();
+			public var words:Object = {};
 			
 			[Bindable]
 			public var currentLanguage:String;
