--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/popups/Containers2.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/popups/Containers2.mxml
@@ -65,7 +65,7 @@
 			
 			public function getContainers():String
 			{
-				var contArt:Array = new Array();
+				var contArt:Array = [];
 				
 				for each (var avCont:Object in inUsedList.dataProvider)
 					contArt.push(avCont["label"]);
