--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/popups/Containers.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/popups/Containers.mxml
@@ -42,6 +42,11 @@
 				PopUpManager.removePopUp(this);
 			}
 			
+			public function closePopUp():void
+			{				
+				dispatchEvent( new CloseEvent( CloseEvent.CLOSE ) );
+			}
+			
 			private function button1_clickHandler():void
 			{
 				container = contList.selectedItem;
