при изменении любого поля, появляется возможность сохранить Объект
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6641 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Resourses.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Resourses.mxml
@@ -17,6 +17,8 @@
 			import mx.utils.Base64Encoder;
 			import mx.utils.UIDUtil;
 			
+			public static const RESOURCES_CHANGED:String = "ResourcesChanged";
+			
 			private var _data : XML;
 			
 			[Bindable]
