--- a/TypeEditor/v.02/src/ObjectEditor2.mxml
+++ b/TypeEditor/v.02/src/ObjectEditor2.mxml
@@ -24,7 +24,11 @@
 	
 	<mx:HDividedBox width="100%" height="100%">
 		<mx:VBox  height="100%" width="150" >
-			<s:Button id="openButton" label="Open" />			
+			<s:HGroup>
+				<s:Button id="openButton" 		label="Open" />
+				<s:Button id="newObjectButton" 	label="New" />
+			</s:HGroup>
+						
 			<vs:ObjectsAccordion id="objAccordion" width="100%"/>					
 		</mx:VBox>
 		
