create and delete object from IDE and files directory
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6645 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/AccordionNavigatorContent.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/AccordionNavigatorContent.mxml
@@ -15,6 +15,11 @@
 				arrColl.addItem(obj);
 			}
 			
+			public function removeObject(ind:int):void
+			{
+				arrColl.removeItemAt(ind)
+			}
+			
 			public function get selectedObject():Object
 			{
 				return arrColl[list.selectedIndex];
