--- a/TypeEditor/v.02/src/ObjectEditor2.mxml
+++ b/TypeEditor/v.02/src/ObjectEditor2.mxml
@@ -25,8 +25,9 @@
 	<mx:HDividedBox width="100%" height="100%">
 		<mx:VBox  height="100%" width="150" >
 			<s:HGroup>
-				<s:Button id="openButton" 		label="Open" />
-				<s:Button id="newObjectButton" 	label="New" />
+				<s:Button id="openButton" 		label="Open" 	width="55"	toolTip="open directory of types"/>
+				<s:Button id="newObjectButton" 	label="New"		width="50"	toolTip="create new Object"/>
+				<s:Button id="delObjectButton" 	label="X"		width="30"	toolTip="delete Object"/>
 			</s:HGroup>
 						
 			<vs:ObjectsAccordion id="objAccordion" width="100%"/>					
