--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Events.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Events.mxml
@@ -9,6 +9,7 @@
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
+			import mx.controls.Alert;
 						
 			[Bindable]
 			public var currentEvent:Object;  /*{label: eventName, data:  }*/
@@ -33,7 +34,13 @@
 					
 			private function changeField():void
 			{
-				dispatchEvent(new Event( Event.CHANGE ));
+				if (currentParameter)
+					dispatchEvent(new Event( Event.CHANGE ));
+				else
+				{
+					//Alert("First, add a parameter");
+//					event.target.text = "";
+				}
 			}
 			
 		]]>
@@ -49,22 +56,22 @@
 			<s:Button id="deleteEventButton" label="Delete" enabled="{eventsList.selectedIndex != -1}"/>
 		</s:HGroup>
 	</mx:Form >
-	<mx:Form  paddingTop="0" horizontalScrollPolicy="off" verticalScrollPolicy="off" >
+	<mx:Form  paddingTop="0" horizontalScrollPolicy="off" verticalScrollPolicy="off" enabled="{currentEvent}">
 		<mx:FormHeading fontSize="10"  label="Events details:" paddingTop="0" />
 		<mx:FormItem label="Name:" toolTip="Name">
-			<mx:TextInput id="eventName" width="150" change="{changeField()}" />
+			<mx:TextInput id="eventName" width="150" change="{changeField()}"/>
 		</mx:FormItem>
 		
 		<s:HGroup width="100%"/>
 		<s:Label text="Select parameter:" />
-		<s:List id="parametersList" width="100%" height="{300}" change="this.currentParameter=List(event.target).selectedItem" /><!--dataProvider="{arParameters}"   change="{changeParameter()}"/-->
+		<s:List id="parametersList" width="100%" height="{300}" change="this.currentParameter=List(event.target).selectedItem" />
 		<s:HGroup width="100%" >
 			<s:HGroup width="100%"/>
 			<s:Button id="addParameterButton" label="Add" />
 			<s:Button id="deleteParameterButton" label="Delete" enabled="{parametersList.selectedIndex != -1}"/>
 		</s:HGroup>
 	</mx:Form>
-	<mx:Form  color="0x323232" paddingTop="0"  horizontalScrollPolicy="off" verticalScrollPolicy="off">
+	<mx:Form  color="0x323232" paddingTop="0"  horizontalScrollPolicy="off" verticalScrollPolicy="off" enabled="{currentParameter}">
 		<mx:FormHeading fontSize="10"  label="Parameters detais:" paddingTop="0" />
 		
 		<mx:FormItem label="Name:" toolTip="Имя объекта">
@@ -76,7 +83,7 @@
 		</mx:FormItem>
 		
 		<mx:FormItem label="VbType:" toolTip="Это VbType">
-			<mx:TextInput id="parVbType" width="200" change="{changeField()}" />
+			<mx:TextInput id="parVbType" width="200" change="{changeField()}"/>
 		</mx:FormItem>
 		
 		<mx:FormItem label="Help:" toolTip="Это Help">
