--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox
-					xmlns:fx="http://ns.adobe.com/mxml/2009" 
-					xmlns:s="library://ns.adobe.com/flex/spark" 
-					xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" xmlns:ns="net.vdombox.object_editor.view.essence.*" >
+		xmlns:fx="http://ns.adobe.com/mxml/2009" 
+		xmlns:s="library://ns.adobe.com/flex/spark" 
+		xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
+		xmlns:ns="net.vdombox.object_editor.view.essence.*" >
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -49,6 +50,6 @@
 		
 		<s:Button label="Save"		id="saveObjectTypeButton"	enabled="{isEnabled}"/>
 		<s:Button label="Save as"	id="saveAsObjectTypeButton"	enabled="{isEnabled}"/>
-		<s:Button label="Restart"	id="restartButton"			enabled="{isEnabled}"/>
+		<s:Button label="Reload"	id="restartButton"			enabled="{isEnabled}"/>
 	</s:HGroup>	
 </mx:VBox>
