--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Actions.mxml
@@ -62,7 +62,7 @@
 		]]>
 	</fx:Script>
 	<s:Scroller width="{this.width}" height="{this.height}">
-	<s:VGroup x="10"  gap="20">
+	<s:VGroup x="10"  gap="20" paddingLeft="5">
 		<s:VGroup >
 			<s:Label  text="Containers:" fontSize="20"/>
 			<s:List id="containersList" width="200" height="80" change="this.currentContainer=List(event.target).selectedItem"/>
@@ -103,7 +103,7 @@
 					</s:VGroup>
 				</s:HGroup >
 				<s:HGroup enabled="{currentAction}">
-					<s:Label text="Parameters:" />
+					<s:Label text="Parameters:" width="95" paddingLeft="16"/>
 					<s:VGroup color="#1100ff">
 						
 						<s:List id="parametersList" width="100%" height="{155}" change="this.currentParameter=List(event.target).selectedItem" />
