--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Resourses.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Resourses.mxml
@@ -41,13 +41,18 @@
 					
 					arResources.addItem(item);
 				}	
-			}			
+			}
+			
+			/*public function changeField():void
+			{
+				dispatchEvent(new Event( Event.CHANGE ));
+			}*/
 		]]>
 	</fx:Script>
 	<s:VGroup width="100%" height="100%">
 		
 		<mx:DataGrid id="resourcesDataGrid" color="0x323232" width="100%" height="100%" rowCount="3"   itemEditEnd="{}"
-					 editable="true" >
+					 editable="true">
 			<mx:columns>
 				<mx:DataGridColumn dataField="id"   dataTipField="ID"   width="200" />
 				<mx:DataGridColumn dataField="name" dataTipField="Name" width="150" />
